Updates from Overleaf

--- a/metric-learn-jmlr.bib
+++ b/metric-learn-jmlr.bib
@@ -1,22 +1,13 @@
-
-@Article{chow:68,
-  author = 	 {C. K. Chow and C. N. Liu},
-  title = 	 {Approximating discrete probability distributions with dependence trees},
-  journal = 	 {IEEE Transactions on Information Theory},
-  year = 	 {1968},
-  volume = 	 {IT-14},
-  number = 	 {3},
-  pages = 	 {462--467}}
-
-
-@Book{pearl:88,
-  author = 	 {Judea Pearl},
-  title = 	 {Probabilistic {R}easoning in {I}ntelligent {S}ystems: 
-		  {N}etworks of {P}lausible {I}nference},
-  publisher = 	 {Morgan Kaufman Publishers},
-  year = 	 {1988},
-  address = 	 {San Mateo, CA}
+@misc{Bellet13,
+    title={A Survey on Metric Learning for Feature Vectors and Structured Data},
+    author={Aurélien Bellet and Amaury Habrard and Marc Sebban},
+    year={2013},
+    eprint={1306.6709},
+    archivePrefix={arXiv},
+    primaryClass={cs.LG}
 }
+
+
 
 
 @article{scikit-learn,
@@ -54,4 +45,191 @@
   year         = 2017,
   doi          = {10.5281/zenodo.830033},
   url          = {https://doi.org/10.5281/zenodo.830033}
+}
+
+
+@inproceedings{Law13,
+ author = {Law, Marc T. and Thome, Nicolas and Cord, Matthieu},
+ title = {Quadruplet-Wise Image Similarity Learning},
+ booktitle = {Proceedings of the 2013 IEEE International Conference on Computer Vision},
+ series = {ICCV '13},
+ year = {2013},
+ isbn = {978-1-4799-2840-8},
+ pages = {249--256},
+ numpages = {8},
+ url = {http://dx.doi.org/10.1109/ICCV.2013.38},
+ doi = {10.1109/ICCV.2013.38},
+ acmid = {2587202},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+ keywords = {metric learning, machine learning},
+} 
+
+@article{Weinberger09,
+ author = {Weinberger, Kilian Q. and Saul, Lawrence K.},
+ title = {Distance Metric Learning for Large Margin Nearest Neighbor Classification},
+ journal = {J. Mach. Learn. Res.},
+ issue_date = {12/1/2009},
+ volume = {10},
+ month = jun,
+ year = {2009},
+ issn = {1532-4435},
+ pages = {207--244},
+ numpages = {38},
+ url = {http://dl.acm.org/citation.cfm?id=1577069.1577078},
+ acmid = {1577078},
+ publisher = {JMLR.org},
+} 
+
+
+@inproceedings{Goldberger04,
+ author = {Goldberger, Jacob and Roweis, Sam and Hinton, Geoff and Salakhutdinov, Ruslan},
+ title = {Neighbourhood Components Analysis},
+ booktitle = {Proceedings of the 17th International Conference on Neural Information Processing Systems},
+ series = {NIPS'04},
+ year = {2004},
+ location = {Vancouver, British Columbia, Canada},
+ pages = {513--520},
+ numpages = {8},
+ url = {http://dl.acm.org/citation.cfm?id=2976040.2976105},
+ acmid = {2976105},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA},
+} 
+
+
+@article{Sugiyama07,
+  title={Dimensionality Reduction of Multimodal Labeled Data by Local Fisher Discriminant Analysis},
+  author={Masashi Sugiyama},
+  journal={J. Mach. Learn. Res.},
+  year={2007},
+  volume={8},
+  pages={1027-1061}
+}
+
+
+@inproceedings{Shental02,
+author = {Shental, Noam and Hertz, Tomer and Weinshall, Daphna and Pavel, Misha},
+year = {2002},
+month = {05},
+pages = {181-185},
+title = {Adjustment Learning and Relevant Component Analysis},
+journal = {ECCV},
+doi = {10.1007/3-540-47979-1_52}
+}
+
+@article{Xiang08,
+ author = {Xiang, Shiming and Nie, Feiping and Zhang, Changshui},
+ title = {Learning a Mahalanobis Distance Metric for Data Clustering and Classification},
+ journal = {Pattern Recogn.},
+ issue_date = {December, 2008},
+ volume = {41},
+ number = {12},
+ month = dec,
+ year = {2008},
+ issn = {0031-3203},
+ pages = {3600--3612},
+ numpages = {13},
+ url = {http://dx.doi.org/10.1016/j.patcog.2008.05.018},
+ doi = {10.1016/j.patcog.2008.05.018},
+ acmid = {1405230},
+ publisher = {Elsevier Science Inc.},
+ address = {New York, NY, USA},
+ keywords = {Data clustering, Distance metric learning, Face pose estimation, Global optimization, Interactive image segmentation, Mahalanobis distance},
+} 
+
+
+
+@inproceedings{Qi09,
+ author = {Qi, Guo-Jun and Tang, Jinhui and Zha, Zheng-Jun and Chua, Tat-Seng and Zhang, Hong-Jiang},
+ title = {An Efficient Sparse Metric Learning in High-dimensional Space via L1-penalized Log-determinant Regularization},
+ booktitle = {Proceedings of the 26th Annual International Conference on Machine Learning},
+ series = {ICML '09},
+ year = {2009},
+ isbn = {978-1-60558-516-1},
+ location = {Montreal, Quebec, Canada},
+ pages = {841--848},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/1553374.1553482},
+ doi = {10.1145/1553374.1553482},
+ acmid = {1553482},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+
+@inproceedings{Davis07,
+ author = {Davis, Jason V. and Kulis, Brian and Jain, Prateek and Sra, Suvrit and Dhillon, Inderjit S.},
+ title = {Information-theoretic Metric Learning},
+ booktitle = {Proceedings of the 24th International Conference on Machine Learning},
+ series = {ICML '07},
+ year = {2007},
+ isbn = {978-1-59593-793-3},
+ location = {Corvalis, Oregon, USA},
+ pages = {209--216},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/1273496.1273523},
+ doi = {10.1145/1273496.1273523},
+ acmid = {1273523},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+@INPROCEEDINGS{Liu12, 
+author={E. Y. {Liu} and Z. {Guo} and X. {Zhang} and V. {Jojic} and W. {Wang}}, 
+booktitle={2012 IEEE 12th International Conference on Data Mining}, 
+title={Metric Learning from Relative Comparisons by Minimizing Squared Residual}, 
+year={2012}, 
+volume={}, 
+number={}, 
+pages={978-983}, 
+keywords={convex programming;learning (artificial intelligence);minimisation;pattern clustering;squared residual minimisation;relative distance comparison;distance function;pairwise constraint;Mahalanobis distance metric learning;convex objective function minimisation;learned metric matrix;clustering accuracy;Measurement;Accuracy;Clustering algorithms;Symmetric matrices;Linear programming;Covariance matrix;Convergence;metric learning;Mahalanobis metric;relative comparisons}, 
+doi={10.1109/ICDM.2012.38}, 
+ISSN={1550-4786}, 
+month={Dec},}
+
+@article{Kulis13,
+  added-at = {2018-05-15T20:31:27.000+0200},
+  author = {Kulis, Brian and others},
+  biburl = {https://www.bibsonomy.org/bibtex/29dde055004ee6c0b32de4b319d15e4ce/becker},
+  interhash = {e87b3f10594dbee9f54bc549486f87ec},
+  intrahash = {9dde055004ee6c0b32de4b319d15e4ce},
+  journal = {Foundations and Trends{\textregistered} in Machine Learning},
+  keywords = {metric learning deepscan survey review citedby:scholar:count:364 citedby:scholar:timestamp:2018-5-15},
+  number = 4,
+  pages = {287--364},
+  publisher = {Now Publishers, Inc.},
+  timestamp = {2018-05-15T20:31:27.000+0200},
+  title = {Metric learning: A survey},
+  volume = 5,
+  year = 2013
+}
+
+
+
+@misc{Surez18,
+    title={A Tutorial on Distance Metric Learning: Mathematical Foundations, Algorithms and Software},
+    author={Juan Luis Suárez and Salvador García and Francisco Herrera},
+    year={2018},
+    eprint={1812.05944},
+    archivePrefix={arXiv},
+    primaryClass={cs.LG}
+}
+
+
+@InProceedings{Weinberger07,
+  title = 	 {Metric Learning for Kernel Regression},
+  author = 	 {Kilian Q. Weinberger and Gerald Tesauro},
+  booktitle = 	 {Proceedings of the Eleventh International Conference on Artificial Intelligence and Statistics},
+  pages = 	 {612--619},
+  year = 	 {2007},
+  editor = 	 {Marina Meila and Xiaotong Shen},
+  volume = 	 {2},
+  series = 	 {Proceedings of Machine Learning Research},
+  address = 	 {San Juan, Puerto Rico},
+  month = 	 {21--24 Mar},
+  publisher = 	 {PMLR},
+  pdf = 	 {http://proceedings.mlr.press/v2/weinberger07a/weinberger07a.pdf},
+  url = 	 {http://proceedings.mlr.press/v2/weinberger07a.html},
+  abstract = 	 {Kernel regression is a well-established method for nonlinear regression in which the target value for a test point is estimated using a weighted average of the surrounding training samples. The weights are typically obtained by applying a distance-based kernel function to each of the samples, which presumes the existence of a well-defined distance metric. In this paper, we construct a novel algorithm for supervised metric learning, which learns a distance function by directly minimizing the leave-one-out regression error. We show that our algorithm makes kernel regression comparable with the state of the art on several benchmark datasets, and we provide efficient implementation details enabling application to datasets with  O(10k) instances. Further, we show that our algorithm can be viewed as a supervised variation of PCA and can be used for dimensionality reduction and high dimensional data visualization.}
 }
